<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_160sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardMaxElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@color/black100" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/movie_title_placeholder" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    tools:text="@string/movie_year_placeholder" />

            </LinearLayout>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>